Initial implementation of BodyTextExtractor